add controller, api, request specs, swagger
