# config/routes.rb
@@ -32,6 +32,7 @@ Rails.application.routes.draw do
       resources :children, param: :slug
       resources :payments, param: :slug
       resources :case_cycles, param: :slug
+      resources :attendances, param: :slug
     end
   end
 
